Completed using jupyter (need)

--- a/using jupyter/using_jupyter_(need).ipynb
+++ b/using jupyter/using_jupyter_(need).ipynb
@@ -55,6 +55,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4772b62f-9f5d-418e-ab96-f99253b51bcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Wolrd\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello Wolrd')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "889d862d",
@@ -73,12 +91,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a73bceb-41a6-4a5f-b19c-50ec15fd0ba4",
+   "metadata": {},
+   "source": [
+    "The ships hung in the sky in much the same way that bricks don’t."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "f21a3ef9",
    "metadata": {},
    "source": [
     "## 4.2 Some basic syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaaac9c5-fb98-4300-bd5a-f07763c1fed0",
+   "metadata": {},
+   "source": [
+    "The **ships** ***hung in the sky*** in much the *same* way that bricks **don't**. <sup>1</sup><sub>QUOTE</sub>"
    ]
   },
   {
@@ -91,12 +125,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4635ab13-f582-4b27-aa43-1cd86062b58b",
+   "metadata": {},
+   "source": [
+    "# HARRY POTTER IS DEAD!\n",
+    "## Voldermot: AHAHAHAHHAHAHHAHHAHAHA\n",
+    "### Narcissa: 'poke,poke'\n",
+    "#### Or is he..."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "136e6bc7",
    "metadata": {},
    "source": [
     "## 4.4 Displaying Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83488a8f-e0b4-407a-86a1-97cac23b6558",
+   "metadata": {},
+   "source": [
+    "`print('Hello World')`"
    ]
   },
   {
@@ -109,12 +162,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e43dab8e-3848-4302-b81c-b3394df909f2",
+   "metadata": {},
+   "source": [
+    "[Dualism](https://en.wikipedia.org/wiki/Mind%E2%80%93body_dualism#:~:text=Substance%20dualism%2C%20or%20Cartesian%20dualism,and%20the%20body%20cannot%20think.)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "588d08df",
    "metadata": {},
    "source": [
     "## 4.6 Images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c05ef4b2-ddf0-4088-9a5b-d980c07ce9af",
+   "metadata": {},
+   "source": [
+    "![The Old Guitarist](http://localhost:8888/files/using%20jupyter/Old_guitarist_chicago.jpg?_xsrf=2%7C59ecb182%7C592a7864d550be2f381a8c41dd6de1f8%7C1705652797)"
    ]
   },
   {
@@ -127,12 +196,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7357dd3c-fb97-432e-8f63-ec7242fa9969",
+   "metadata": {},
+   "source": [
+    "| Concentration of poison/% | Time taken for insect to die/s |   |   |   |\n",
+    "|---------------------------|--------------------------------|---|---|---|\n",
+    "| 0.1                       | 200                            |   |   |   |\n",
+    "| 0.2                       | 151                            |   |   |   |\n",
+    "| 0.3                       | 80                             |   |   |   |"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "9dfb7a92",
    "metadata": {},
    "source": [
     "## 4.8 Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7329d4f3-5de5-48c0-b797-f4c34a7d1787",
+   "metadata": {},
+   "source": [
+    "1. HAHAHHAHAHA\n",
+    "2. HAHHAHAHA\n",
+    "3. HAHAHAH\n",
+    "   - HAHAH\n",
+    "   - HAHA\n",
+    "   - HA\n",
+    "     1. H\n",
+    "     2. |"
    ]
   },
   {
@@ -145,6 +241,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b194a07e-84ae-4ab5-86dc-14e7e4ac96e0",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\dfrac{2}{3}x^{2}+\\sqrt{56}y-2z \\leq 42\n",
+    "$$"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ff4e3269",
@@ -152,6 +258,14 @@
    "source": [
     "## Footnotes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f9c1d0a-2419-45e4-ae56-f8f3e5d8a01c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
