Using jupyter good ready for checking

--- a/using jupyter/using_jupyter_(good).ipynb
+++ b/using jupyter/using_jupyter_(good).ipynb
@@ -160,10 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0865a8ab",
+   "execution_count": 1,
+   "id": "bf610149",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.4 ns ± 1.61 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "x=10\n",
@@ -178,6 +186,14 @@
    "source": [
     "# 4 The Kernel"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d55ae64",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
