--- a/fundamentals/fundamentals_(need).ipynb
+++ b/fundamentals/fundamentals_(need).ipynb
@@ -24,8 +24,16 @@
    "id": "81e81959",
    "metadata": {},
    "source": [
-    "# 1 Functions"
+    "## Functions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a45fb86c-d297-4667-820a-084bc877911d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -46,12 +54,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bd78b381-bbe8-4fd0-9a3c-d02c64c5ad14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ec0bd1e6-6577-4070-a649-cde64e31e56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World again\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello World again') "
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "c2a79d57",
    "metadata": {},
    "source": [
     "# 4 Python is sensitive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a1b9e930-0b46-4ee8-aa92-42e42250960c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Print' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mPrint\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello World\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Print' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Print('Hello World')"
    ]
   },
   {
@@ -73,6 +139,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7bddef04-6165-4816-ba0e-4915d57e9e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a comment print('HIIII')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3536dca7",
@@ -91,6 +167,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "33fc401f-b4ee-4331-9b10-bc26cc5bcd9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'Yuan Zhe' # Make name carry 'Yuan Zhe'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9c7a1dcb-1d62-4d32-b35c-f643de9faabf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name == 'Yuan Zhe'"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "d3a26ddc",
@@ -106,6 +213,28 @@
    "metadata": {},
    "source": [
     "# 10 Use if to make decisions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "231a430e-0c37-49cf-a2d9-96b120d42516",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Yuan Zhe\n"
+     ]
+    }
+   ],
+   "source": [
+    "if name == 'Yuan Zhe':\n",
+    "    print('Hello Yuan Zhe')\n",
+    "\n",
+    "else:\n",
+    "    print('Accio Yuan Zhe')"
    ]
   },
   {
@@ -145,12 +274,112 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e81609f3-47a9-4a5c-844e-139e28f1e657",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 40\n",
+    "print(age)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3d60f794",
    "metadata": {},
    "source": [
     "# 15 Brackets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "96280387-b686-460e-8338-63a5a62faf6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Yuan Zhe\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello Yuan Zhe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c069c712-ab12-4804-a17d-d9ea2a283523",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "428"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(24-7) * 25+3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "287f3c73-6b11-4028-8bbe-df6119c7bbd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "py_list = [2, 3, 5, 7, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7ce9880a-1213-4e70-9a4c-1284528bb6bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SP2273_info = {\n",
+    "    'Lecture timings': 'too early in the morning',\n",
+    "    'Location': 'LT34',\n",
+    "    'Contents': 'python'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7efb9a00-b283-4354-a961-955cde0650be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LT34\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(SP2273_info['Location'])"
    ]
   },
   {
@@ -181,6 +410,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9c7bd066-33c2-4667-9998-f9f41fdf5e39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7feae684-c77e-499e-a3ee-43a811a402bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8284271247461903"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.sqrt(8)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "579e448c",
@@ -190,12 +450,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ae4129b0-8971-43fd-af1e-6b4799b1f49c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2b89aef8-7de7-44ef-9e2c-40c97df5f5a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8284271247461903"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(8)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "2aef2aa5",
    "metadata": {},
    "source": [
     "## 16.4 Why so many packages?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f870a234-bffb-4182-9ec7-d828c9f72a2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.82842712,  3.46410162, 10.04987562])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt([8, 12, 101])"
    ]
   },
   {
@@ -214,6 +526,79 @@
    "metadata": {},
    "source": [
     "# 18 The dot (.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a06661d2-0196-4ff7-917c-f8b54dbdef06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=1j+10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "cd57976c-c515-4bf3-888c-c501766d2b43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7b4e01ed-8325-48ff-83ed-29c4df82aacc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.imag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "abd5bb39-dad9-4e5e-a73c-3fb76803d645",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'APPLE'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'apple'.upper()"
    ]
   },
   {
