--- a/storing data/storing_data_(need).ipynb
+++ b/storing data/storing_data_(need).ipynb
@@ -730,23 +730,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "31a4be2a-1d2e-4900-9184-78161691e5eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function ndarray.min>"
+       "1"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np_array.min"
+    "np_array.min()"
    ]
   },
   {
